# buaa-wifi-login-cli

./: Cargo.toml  Readme.md
.github/workflows/: build.yml
src/: main.rs
